<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.koala</groupId>
        <artifactId>tools</artifactId>
        <version>${revision}</version>
    </parent>
    <artifactId>tools-factory</artifactId>
    <version>${revision}</version>
    <name>tools-factory</name>
    <description>tools-factory</description>
    <properties>
        <java.version>17</java.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>com.koala</groupId>
            <artifactId>tools-base</artifactId>
        </dependency>
        <dependency>
            <groupId>com.koala</groupId>
            <artifactId>tools-data</artifactId>
        </dependency>
        <dependency>
            <groupId>com.koala</groupId>
            <artifactId>tools-service</artifactId>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
